--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,7 @@ env:
     CLUSTER_NAME: "websitecluster"
     AWS_DEFAULT_REGION: "ap-south-1"
     IMAGE_TAG: "latest"
+    REPOSITORY_URI: "851725467078.dkr.ecr.ap-south-1.amazonaws.com/website"
 phases:
   pre_build:
     commands:
